# chessplaza

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
chessplaza/: __init__.py  __main__.py  board.py  hustler.py  prototype.py  voice.py
contrib/pytest-claude-agent-sdk/: README.md  pyproject.toml
tests/proto/: genai_voice.py  ui.py
tests/unit/: test___main__.py  test_hustler.py  test_hustler_llm.py
